day 11 p1 naive, p2 does obviously not work yet
clearly, we need to work with cycles, as the stones are independent.
As we know 0 -> 1 -> 2024 -> [20, 24] -> [2, 0 , 2, 4] this should be
easy if we actually use our brain instead of cpu :D
it also suffices to calculate the update once per unique number and just
keep track of how often we have this number.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    
     {
       "type": "lldb",
       "request": "launch",
@@ -35,6 +36,43 @@
         ],
         "filter": {
           "name": "aoc2024",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'day11'",
+      "cargo": {
+        "args": [
+          "build",
+          "--bin=day11",
+          "--package=aoc2024"
+        ],
+        "filter": {
+          "name": "day11",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug unit tests in executable 'day11'",
+      "cargo": {
+        "args": [
+          "test",
+          "--no-run",
+          "--bin=day11",
+          "--package=aoc2024"
+        ],
+        "filter": {
+          "name": "day11",
           "kind": "bin"
         }
       },
