--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,6 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    
     {
       "type": "lldb",
       "request": "launch",
@@ -73,6 +72,43 @@
         ],
         "filter": {
           "name": "day11",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'day12'",
+      "cargo": {
+        "args": [
+          "build",
+          "--bin=day12",
+          "--package=aoc2024"
+        ],
+        "filter": {
+          "name": "day12",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug unit tests in executable 'day12'",
+      "cargo": {
+        "args": [
+          "test",
+          "--no-run",
+          "--bin=day12",
+          "--package=aoc2024"
+        ],
+        "filter": {
+          "name": "day12",
           "kind": "bin"
         }
       },
